--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,4 @@ JWT_SECRET=12345
 ADMIN_KEY=12345
 INSTRUCTOR_KEY=12345
 # Allowed frontend origins (comma-separated)
-ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,"https://e-school-online-learn.netlify.app"
